# ipyagent

./: .gitignore  CHANGELOG.md  DEV.md  README.md  pyproject.toml  test_interactive.sh
.agents/skills/ex/: SKILL.md
.agents/skills/exhash/: SKILL.md
.agents/skills/ipyai-help/: SKILL.md
.agents/skills/ipython-unicode/: SKILL.md
.agents/skills/sed/: SKILL.md
.pi/extensions/: ipycodex-bridge.ts
_layouts/: default.html
ipyagent/: __main__.py  cli.py  core.py  pi_client.py
ipyagent/extensions/: ipyagent-bridge.ts
ipyai/: cli.py  codex_client.py  core.py
ipycodex/: __init__.py  __main__.py  cli.py  codex_client.py  core.py  pi_client.py
tests/: test_codex_client.py  test_core.py
tools/: trace.jsonl  trace_appserver.py
